fixed positioning of bg image since in certain situations it wasn't covering entire screen; upgraded registration page to fit the current theme; removed obsolete react reference

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -12,8 +12,14 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     color: white;
-    background-color: #606060;
     height: 100%;
+    background: url("bg.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.65);
+    background-blend-mode: multiply;
 }
 
 .logo {
@@ -54,9 +60,6 @@ body {
 
 .front {
     height: 100%;
-    background: url("bg.jpg") no-repeat center / cover;
-    background-color: rgba(0, 0, 0, 0.65);
-    background-blend-mode: multiply;
     animation: fadein 1s;
     position: relative;
 }
